--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,7 @@ dependencies {
     //implementation 'com.google.firebase:firebase-analytics'
     //implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.google.firebase:firebase-messaging:21.1.0'
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation project(':react-native-push-notification')
 
