--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/netinfo": "^5.9.9",
     "@react-native-community/picker": "^1.8.1",
     "axios": "^0.21.0",
+    "haversine": "^1.1.1",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
@@ -32,7 +33,7 @@
     "react-native-otp-inputs": "^6.0.0",
     "react-native-paystack": "^3.4.0",
     "react-native-paystack-webview": "^3.2.1",
-    "react-native-push-notification": "^7.0.0",
+    "react-native-push-notification": "^7.2.3",
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
