--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:requestLegacyExternalStorage="true">
+      android:requestLegacyExternalStorage="true"
+      android:usesCleartextTraffic="true"
+    >
       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
       <meta-data  android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDQmOfO0DzoFsx7Vx5UV_mAusRPBwCIDjg"/>
 
@@ -28,7 +30,7 @@
                   android:value="false"/>
       <!-- For notification icon -->
       <meta-data  android:name="com.google.firebase.messaging.default_notification_icon"
-                  android:resource="@drawable/ic_stat_notification" />
+                  android:resource="@mipmap/ic_stat_notification" />
       <!-- Change the resource name to your App's accent color - or any other color you want -->
       <meta-data  android:name="com.dieam.reactnativepushnotification.notification_color"
                   android:resource="@color/white"/> 
